--- a/src/scss/brand/components/_components.scss
+++ b/src/scss/brand/components/_components.scss
@@ -10,6 +10,7 @@
 @import 'fonts/index';
 @import 'filter/index';
 @import 'forms/index';
+@import 'headings-and-borders/index';
 @import 'hero-banner/index';
 @import 'icons/index';
 @import 'mega-menu/index';
