--- a/src/scss/brand/components/hero-banner/_index.scss
+++ b/src/scss/brand/components/hero-banner/_index.scss
@@ -10,10 +10,10 @@
       order: unset;
       padding-top: 3rem;
     }
-    @media only screen and (min-width: 1023px) {
+    /* @media only screen and (min-width: 1023px) {
       padding-left: 0;
       padding-right: 0;
-    }
+    } */
     .heading {
       white-space: initial;
       padding-top: 1rem;
