--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -20,30 +20,30 @@
 
 .bg-grey-border {
   .border-right {
-      border-bottom: solid rgba(0,0,0,0) 2px;
-      border-right: none;
-      @include sm {
-          border-right: solid rgba(0,0,0,0) 2px;
-          border-bottom: none;
-      }
+    border-bottom: 2px solid $color-3;
+    border-right: none;
+    @include sm {
+        border-right: 2px solid $color-3;
+        border-bottom: none;
+    }
   }
   .left-area {
-      padding-right: 0;
-      @include sm {
-          padding-right: 4.375rem !important;
-      }
+    padding-right: 0;
+    @include sm {
+      padding-right: 4.375rem !important;
+    }
   }
   .right-area {
-      padding-left: 0;
+    padding-left: 0;
+    @include sm {
+      padding-left: 4.375rem !important;
+    }
+    .heading {
+      padding-top: 2rem;
       @include sm {
-          padding-left: 4.375rem !important;
+        padding-top: 0;
       }
-      .heading{
-          padding-top: 2rem;
-          @include sm{
-              padding-top: 0;
-          }
-      }
+    }
   }
 }
 
