--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -1,6 +1,7 @@
 /* contact form */
 
 .haleon-contact-form {
+
   input,
   select,
   textarea {
@@ -12,12 +13,22 @@
     background-color: $color-grey-3;
     color: $color-3;
   }
+
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus,
-  input:-webkit-autofill:active {
+  input:-webkit-autofill:active,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  textarea:-webkit-autofill:active,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus,
+  select:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
   }
+
   textarea {
     resize: none;
     width: 100%;
@@ -29,6 +40,7 @@
     border: 2px solid $color-grey-3;
     appearance: none;
     position: relative;
+
     option:hover {
       background-color: var(--bg-color-2);
     }
@@ -38,6 +50,7 @@
     display: block;
     width: 20px;
     position: absolute;
+
     input[type='checkbox'] {
       width: 20px;
       height: 20px;
@@ -45,6 +58,7 @@
       accent-color: var(--color-primary);
       top: -2.5rem;
       position: absolute;
+
       &::before {
         content: '';
         position: absolute;
@@ -66,6 +80,7 @@
       background-color: var(--bg-color-2);
     }
   }
+
   .privacy-desc-haleon {
     font-size: 1.125rem;
     font-family: $font-normal;
@@ -80,14 +95,17 @@
   .group-form {
     display: block;
     font-weight: 600;
+
     .input-required {
       color: #c30000;
       font-size: 0.875rem;
       line-height: 1.25;
       display: none;
     }
+
     .dropdown-arrow {
       position: relative;
+
       &:after {
         content: '\e901';
         font-family: 'icomoon';
@@ -102,6 +120,7 @@
     }
   }
 }
+
 .emailValidation {
   input {
     border: 2px solid #c30000 !important;
@@ -112,16 +131,20 @@
     color: #c30000 !important;
   }
 }
+
 .label-form {
   margin: 0.75rem 0;
   font-size: 1.5rem !important;
   line-height: 120% !important;
   display: block;
 }
+
 .pos-absolute {
   position: absolute;
 }
+
 #privacy {
   text-decoration: underline;
 }
+
 /* contact form end */
