--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -1055,6 +1055,7 @@ header {
   > a {
   padding: 0 1rem;
   position: relative;
+  width: auto;
 }
 li.page-who-we-are a::before,
 li.page-our-brands a::before,
