--- a/src/scss/brand/components/_components.scss
+++ b/src/scss/brand/components/_components.scss
@@ -13,10 +13,11 @@
 @import 'headings-and-borders/index';
 @import 'hero-banner/index';
 @import 'icons/index';
+@import 'image-card/index';
 @import 'mega-menu/index';
 @import 'positioned-banner-wrapper/index';
-@import 'page-components/index';
 @import 'profile/index';
+@import 'progress-timeline/index';
 @import 'quote/index';
 @import 'rich-text/index';
 @import 'sitemap/index';
@@ -28,4 +29,5 @@
 @import 'table/index';
 @import 'tabs/index';
 @import 'tag-links/index';
+@import 'text-banners/index';
 @import 'video/index';
