--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -1,74 +1,29 @@
 #footer {
-  margin-top: 0.2rem;
-  padding: 0;
-  width: 100%;
-
-  .p-m-x-1 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-
-    @include sd {
-      padding-left: 1rem !important;
-      padding-right: 1rem !important;
-    }
+   .footer-column {
+    padding: 2rem 1rem;
   }
-
   .footer-secondary-nav {
     border-top: 1px solid $color-grey-3;
     padding: 3rem 1rem;
-    @include sd {
-      padding: 3rem 1rem;
-    }
-
     .footer-logo {
-      display: flex;
-      justify-content: center;
-
-      @include sm {
-        justify-content: flex-start;
+      a {
+        border: 4px solid $color-white;
+        margin: 0 -12px;
+        display: inline-block;
+        &:hover {
+          background-color: #fff;
+          border-color: $color-primary;
+        }
       }
-
+      .left{
+        @media (max-width: $breakpoint-md-max){
+          text-align: center;
+        }
+      }
       img {
         width: 138px;
-        margin-left: 0;
       }
     }
-  }
-
-  .image {
-    a {
-      border: 4px solid $color-white;
-      margin: 0 -12px;
-
-      &:hover {
-        height: auto;
-        background-color: #fff !important;
-        border: 4px solid $color-primary;
-      }
-    }
-  }
-
-  p {
-    color: $color-1;
-    font-size: $font-size-12;
-    line-height: $line-height-150;
-
-    a {
-      margin-right: 3px;
-      font-size: $font-size-15;
-    }
-
-    strong {
-      color: $color-grey-2;
-    }
-  }
-
-  h6 {
-    color: $color-1;
-    line-height: $line-height-150;
-    font-size: $font-size-12;
-    margin-top: 0;
-    margin-bottom: 1rem;
   }
 
   .footer-list {
@@ -76,25 +31,17 @@
     justify-content: center;
     flex-direction: column;
     align-items: flex-start;
-
     @include sm {
       justify-content: space-around;
       flex-direction: row;
       flex-wrap: wrap;
     }
-
     @include sd {
       justify-content: space-between;
     }
-
     li {
       padding-right: 1rem;
-      padding-left: 0 !important;
-
-      @include sd {
-        padding-right: 0;
-      }
-
+      padding-left: 0;
       &:before {
         display: none;
       }
@@ -103,17 +50,11 @@
 
   .copyright {
     margin-top: 0.5rem;
-
-    @include sm {
-      margin-top: 0;
-    }
-
-    .richText-content {
+      .richText-content {
       justify-content: center;
       @include sm {
         justify-content: unset;
       }
-
       p {
         color: $color-2;
         font-size: $font-size-15;
@@ -123,31 +64,11 @@
         text-align: center;
 
         @include sm {
-          margin-top: 0.5rem;
           text-align: left;
         }
       }
     }
   }
-  a {
-    img {
-      width: auto;
-      display: block;
-      height: auto;
-    }
-  }
-  .image {
-    a {
-      display: inline-block;
-      border: 4px solid transparent;
-      margin-top: 2px;
-
-      &:hover {
-        border-color: $color-primary;
-      }
-    }
-  }
-
   .social-pages {
     .icons-with-link {
       margin: $share-icon-spacing;
@@ -156,36 +77,14 @@
       a {
         width: $share-icon-size;
         height: $share-icon-size;
+        img {
+          width: auto;
+          display: block;
+          height: auto;
+        }
       }
     }
 
-    .paragraphSystem {
-      flex-wrap: wrap !important;
-    }
-  }
-}
-
-.reference-footer-g3-v0 {
-  .max-content-width {
-    .paragraphSystem.content {
-      justify-content: space-between;
-    }
-  }
-}
-
-.reference-footer-g3-v0 {
-  .footer-secondary-nav {
-    &.max-content-width {
-      .paragraphSystem.content {
-        justify-content: center !important;
-      }
-    }
-  }
-  .footer-column {
-    padding: 2rem 1rem;
-    @include md {
-      padding: 4rem 1rem;
-    }
   }
 }
 
@@ -205,37 +104,3 @@
   }
 }
 
-ul {
-  li {
-    padding-left: 0;
-    margin-bottom: 0.5rem;
-
-    &::before {
-      content: none !important;
-    }
-
-    a {
-      font-size: $footer-links-font-size-m;
-      padding: 0 0.25rem;
-
-      @media (min-width: $breakpoint-sd-min) {
-        font-size: $footer-links-font-size-d;
-      }
-
-      &.external-link {
-        &:after {
-          top: 0px;
-          width: $external-link-arrow-size;
-          height: $external-link-arrow-size;
-          right: -2px;
-          position: relative;
-          content: $external-link-arrow-image;
-          display: inline-block;
-          line-height: 12px;
-          padding: 1px 0;
-          background-color: $color-active;
-        }
-      }
-    }
-  }
-}
