footer changes done

--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -1,5 +1,5 @@
 #footer {
-   .footer-column {
+  .footer-column {
     padding: 2rem 1rem;
   }
   .footer-secondary-nav {
@@ -15,8 +15,8 @@
           border-color: $color-primary;
         }
       }
-      .left{
-        @media (max-width: $breakpoint-md-max){
+      .left {
+        @media (max-width: $breakpoint-md-max) {
           text-align: center;
         }
       }
@@ -50,7 +50,7 @@
 
   .copyright {
     margin-top: 0.5rem;
-      .richText-content {
+    .richText-content {
       justify-content: center;
       @include sm {
         justify-content: unset;
@@ -84,7 +84,19 @@
         }
       }
     }
-
+    a.external {
+      height: 42px;
+      width: 40px;
+      background: #eaeaea;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 4px;
+    }
+    .icomoon {
+      font-size: 1.4rem;
+      line-height: 1.5;
+    }
   }
 }
 
@@ -103,4 +115,3 @@
     }
   }
 }
-
