--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -6,7 +6,7 @@
     height: auto !important;
     .richText {
       padding: 1rem;
-      &.link-crumbs {
+      &.tag-links {
         padding: 0;
       }
     }
