--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -325,6 +325,10 @@ a[style*='visibility:hidden'] {
   }
 }
 
+.p-dm-x-1-5{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 .object-fit-cover {
   .component-content {
     height: 100% !important;
