--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -48,3 +48,14 @@
 }
 
 /* Health pro End */
+
+.scroll-down-arrow{
+  position: absolute;
+  bottom: -0.5rem;
+ a{
+  background: rgba(255,255,255,0.5);
+  -webkit-backdrop-filter: blur(32px);
+   backdrop-filter: blur(32px);
+   text-align: center;
+ }
+}
