--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -13,6 +13,10 @@
   }
   .small-font {
     @extend .small-font;
+    text-align: center;
+    @include sm {
+      text-align: left;
+    }
   }
   .card-content-wrapper {
     margin-bottom: 2rem;
