--- a/src/scss/brand/components/tag-links/_index.scss
+++ b/src/scss/brand/components/tag-links/_index.scss
@@ -1,25 +1,12 @@
-.tag-links {
-  width: 85%;
-  position: absolute;
-  margin-top: -2.5rem;
-  left: 10px;
-  ul {
-    list-style-type: none;
-    position: relative;
-    li {
-      display: inline !important;
-      background: rgba(0, 0, 0, 0.5);
-      margin-right: 12px;
-      padding: 0 5px !important;
-      color: $color-grey-3 !important;
-      @include sm {
-        display: table !important;
-        top: -1.5rem;
-      }
-      @include lg {
-        display: inline-block !important;
-        top: auto;
-      }
+ul.tag-links {
+  li {
+    border: dotted #484848;
+    display: inline-block;
+    padding: 0.25rem;
+    margin-right: 10px;
+    font-size: 0.875rem;
+    &::before {
+      display: none;
     }
   }
 }
