line height change

--- a/src/scss/default/theme/theme-configuration/_typography.scss
+++ b/src/scss/default/theme/theme-configuration/_typography.scss
@@ -38,15 +38,15 @@ $font-size-h3-mobile: 16px !default;
 $font-size-h4: 20px !default;
 
 //AJUST LINE HEIGHTS FOR THE THEME
-$line-height-body: 24px !default;
-$line-height-body-mobile: 18px !default;
-$line-height-h1: 50px !default;
-$line-height-h1-mobile: 30px !default;
-$line-height-h2: 30px !default;
-$line-height-h2-mobile: 22px !default;
-$line-height-h3: 26px !default;
-$line-height-h3-mobile: 18px !default;
-$line-height-h4: 24px !default;
+$line-height-body: 1.25 !default;
+$line-height-body-mobile: 1.25 !default;
+$line-height-h1: 1.25 !default;
+$line-height-h1-mobile: 1.25 !default;
+$line-height-h2: 1.25 !default;
+$line-height-h2-mobile: 1.25 !default;
+$line-height-h3: 1.25 !default;
+$line-height-h3-mobile: 1.25 !default;
+$line-height-h4: 1.25 !default;
 
 //BACKUP FOR ORIGINAL COMPONENTS
 $font-size-tiny: 11px !default;
