--- a/src/scss/brand/theme/theme-variables/_typography.scss
+++ b/src/scss/brand/theme/theme-variables/_typography.scss
@@ -8,13 +8,13 @@ $font-size-h3: 1.5rem;
 $font-size-h4: 1.3125rem;
 $font-size-h5: 1.125rem;
 $font-size-h6: 0.75rem;
-$font-size-12: 0.75rem;
-$font-size-13: 0.813rem;
-$font-size-14: 0.875rem;
-$font-size-15: 0.938rem;
-$font-size-16: 1rem;
-$font-size-18: 1.125rem;
-$font-size-21: 1.313rem;
+$font-size-12: 12px;
+$font-size-13: 13px;
+$font-size-14: 14px;
+$font-size-15: 15px;
+$font-size-16: 16px;
+$font-size-18: 18px;
+$font-size-21: 21px;
 $font-size-button-large: 1.125rem;
 $font-size-button-medium: 0.9375rem;
 $font-size-button-small: 0.8125rem;
