--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -26,6 +26,7 @@
   select:-webkit-autofill:focus,
   select:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s !important;
+    color: #9e9e9e !important;
   }
 
   textarea {
