--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -5,7 +5,7 @@
   .carousel-slides {
     height: auto !important;
     .richText {
-      padding: 1rem;
+      padding: 0 1rem;
     }
   }
   .carousel-slide {
