--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -16,7 +16,7 @@
         }
       }
       .left {
-        @media (max-width: $breakpoint-md-max) {
+        @media (max-width: $breakpoint-sm-max) {
           text-align: center;
         }
       }
