--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -11,7 +11,6 @@ body {
   }
 }
 a {
-  
   &:focus,
   &:focus:focus-visible {
     outline: 2px dotted;
@@ -295,4 +294,12 @@ a[style*='visibility:hidden'] {
 .bottom-pos-0 {
   position: absolute;
   bottom: 0;
+}
+
+.fit-content {
+  .richText-content {
+    width: fit-content !important;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
