--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -103,7 +103,7 @@ header {
               left: 5.5rem;
               @include sd {
                 top: 0;
-                left: 5.5rem;
+                left: 5.4rem;
               }
             }
           }
@@ -127,10 +127,10 @@ header {
               position: absolute;
               right: 1px;
               top: -5px;
-              left: 6.5rem;
+              left: 6.2rem;
               @include md {
                 top: 0;
-                right: -1.1rem;
+                right: initial;
               }
             }
           }
@@ -403,11 +403,11 @@ header {
         content: '\f0d1';
         font-family: 'icomoon';
         position: relative;
-        width: 16px !important;
-        height: 16px !important;
-        background-size: 16px !important;
+        width: 14px !important;
+        height: 14px !important;
+        background-size: 14px !important;
         right: 0 !important;
-        top: 0.7rem !important;
+        top: 0.9rem !important;
         @media only screen and (max-width: 1023.5px) {
           width: 24px !important;
           height: 24px !important;
@@ -436,7 +436,7 @@ header {
           content: 'Search';
           position: absolute;
           left: -56px;
-          top: 0px;
+          top: -2px;
           font-size: $font-size-16;
           color: $color-black;
           font-family: $font-family-default;
@@ -447,9 +447,9 @@ header {
         &::after {
           content: '';
           position: absolute;
-          left: -50px;
+          left: -57px;
           right: 0;
-          top: -1px;
+          top: -3px;
           height: 20px;
           background-color: $color-primary;
           color: $color-2;
@@ -850,6 +850,7 @@ header {
     font-weight: 400 !important;
     cursor: pointer;
     padding: 0;
+    padding-left: 1px;
   }
   .megamenu-navigation {
     .megamenu-top-bar-left > .component-content > .paragraphSystem {
@@ -874,8 +875,8 @@ header {
   .megamenu-navigation {
     .megamenu--newco {
       .megamenu-top-bar-right {
-        .header-icon-two p a {
-          padding-right: 0 !important;
+        .header-icon-two p {
+          margin-right: -20px !important;
         }
       }
     }
