--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -401,6 +401,7 @@ body {
     color: inherit;
     line-height: inherit;
     padding: inherit;
+    text-decoration: none;
 
     &:hover,
     &:focus {
@@ -502,17 +503,11 @@ body {
 
   img {
     width: auto;
+    height: 100%;
   }
 
   img[src$='.svg'] {
     width: 100%;
-  }
-
-  @media (min-width: $breakpoint-sm-min) and (max-width: $breakpoint-md-max) {
-    //desktop styles
-    img {
-      max-width: 100vw !important;
-    }
   }
 }
 
