--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -202,6 +202,7 @@ header {
               font-size: $font-size-16 !important;
               font-weight: $font-normal !important;
               cursor: pointer;
+              padding: 0 2px;
               &:hover {
                 background-color: $color-primary !important;
               }
@@ -281,7 +282,7 @@ header {
       > .component-content > .navigation-mobile-menu {
         left: auto;
         right: -15px;
-        top: 0px;
+        top: 4px;
         // background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/menu-icon.svg');
         content: '\e916';
         font-family: 'icomoon';
@@ -412,7 +413,7 @@ header {
           width: 24px !important;
           height: 24px !important;
           background-size: 24px !important;
-          top: 3px !important;
+          top: 4px !important;
           right: 2rem !important;
           position: fixed;
         }
@@ -780,6 +781,7 @@ header {
             color: $color-2;
             font-size: 15px;
             line-height: $line-height-100;
+            padding: 0 2px;
           }
         }
       }
