--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -59,3 +59,14 @@
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 1279px) and (min-width: 768px) {
+  .card-text-image-small {
+    .bottom-pos-0 {
+      position: relative;
+    }
+    > .component-content > .paragraphSystem {
+      flex-direction: column !important;
+    }
+  }
+}
