--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -59,3 +59,16 @@
     text-align: center;
   }
 }
+
+/* Home page bg grey section */
+@media only screen and (max-width: 1280px) and (min-width: 992px) {
+  .card-text-image{
+    .bottom-pos-0 {
+      position: relative;
+    }
+    > .component-content > .paragraphSystem{
+      flex-direction: column !important;
+    }
+  }
+}
+/* home page end */
