--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -65,8 +65,10 @@
     .bottom-pos-0 {
       position: relative;
     }
+
     > .component-content > .paragraphSystem {
       flex-direction: column !important;
+      flex-wrap: initial;
     }
   }
 }
