--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -67,6 +67,7 @@
     }
     > .component-content > .paragraphSystem {
       flex-direction: column !important;
+      flex-wrap: initial;
     }
   }
 }
