--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -710,6 +710,7 @@ header {
     > .navigation-item {
     justify-content: left;
     text-align: left; /* min-height: 26px; */
+    width: 100%;
   }
 }
 .megamenu-navigation
@@ -1130,12 +1131,38 @@ li.page-careers a::before {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
   }
+  .megamenu-main-nav > * > .navigation-mobile-menu {
+    display: block;
+  }
+  .megamenu > .component-content {
+    -webkit-transform-origin: top center;
+    -ms-transform-origin: top center;
+    transform-origin: top center;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    -webkit-transition-delay: 0.1s;
+    -o-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+    background: #fff;
+    left: 0;
+    max-height: 50px;
+    min-height: 50px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    width: 100%;
+    z-index: 9;
+  }
 }
 @include sd {
   .megamenu-main-nav > * > .navigation-mobile-menu {
     display: none;
   }
-  .megamenu-main-nav>*>.navigation-root.navigation-level1 {
+  .megamenu-main-nav > * > .navigation-root.navigation-level1 {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -1167,5 +1194,16 @@ li.page-careers a::before {
     -ms-flex-order: 8;
     order: 8;
     width: 100vw;
+  }
+  .megamenu > .component-content {
+    background: transparent;
+    max-height: none;
+    max-width: 1440px;
+    min-height: auto;
+    overflow: visible;
+    position: relative;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
   }
 }
