--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -71,9 +71,10 @@
     }
   }
 }
+
 @media only screen and (max-width: 1440px) and (min-width: 992px) {
   .card-text-image {
-    &.bottom-pos-0 {
+    .bottom-pos-0 {
       position: relative !important;
     }
   }
