--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -1117,6 +1117,41 @@ li.page-careers a::before {
     font-size: $font-size-16;
   }
 }
+.megamenu-navigation .megamenu > .component-content,
+.simple-navigation .megamenu > .component-content {
+  -webkit-transform-origin: top center;
+  -ms-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  -webkit-transition-delay: 0.1s;
+  -o-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+  background: #fff;
+  left: 0;
+  max-height: 50px;
+  min-height: 50px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  width: 100%;
+  z-index: 9;
+  @include sd {
+    background: transparent;
+    max-height: none;
+    max-width: 940px;
+    min-height: auto;
+    overflow: visible;
+    position: relative;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
 @include md {
   .megamenu-main-nav > * > .navigation-root.navigation-level1 {
     background: transparent;
@@ -1133,29 +1168,6 @@ li.page-careers a::before {
   }
   .megamenu-main-nav > * > .navigation-mobile-menu {
     display: block;
-  }
-  .megamenu > .component-content {
-    -webkit-transform-origin: top center;
-    -ms-transform-origin: top center;
-    transform-origin: top center;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    -webkit-transition-delay: 0.1s;
-    -o-transition-delay: 0.1s;
-    transition-delay: 0.1s;
-    background: #fff;
-    left: 0;
-    max-height: 50px;
-    min-height: 50px;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
-    width: 100%;
-    z-index: 9;
   }
 }
 @include sd {
@@ -1194,16 +1206,5 @@ li.page-careers a::before {
     -ms-flex-order: 8;
     order: 8;
     width: 100vw;
-  }
-  .megamenu > .component-content {
-    background: transparent;
-    max-height: none;
-    max-width: 1440px;
-    min-height: auto;
-    overflow: visible;
-    position: relative;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
   }
 }
