--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -96,8 +96,8 @@ header {
               padding-right: 20px;
             }
             &:after {
-              content: '\e91a';
-              font-family: 'icomoon';
+              content: "\e91a";
+              font-family: "icomoon";
               position: absolute;
               top: 1px;
               left: 5.5rem;
@@ -122,8 +122,8 @@ header {
             position: relative;
             padding-right: 20px;
             &:after {
-              content: '\e90f';
-              font-family: 'icomoon';
+              content: "\e90f";
+              font-family: "icomoon";
               position: absolute;
               right: 1px;
               top: -5px;
@@ -142,7 +142,7 @@ header {
             position: relative;
             padding-right: 20px;
             &:after {
-              content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/other-contrast.png');
+              content: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/other-contrast.png");
               position: absolute;
               right: 0;
               top: 4px;
@@ -284,8 +284,8 @@ header {
         right: -15px;
         top: 4px;
         // background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/menu-icon.svg');
-        content: '\e916';
-        font-family: 'icomoon';
+        content: "\e916";
+        font-family: "icomoon";
         font-size: 1rem;
         background-size: auto;
         width: 24px;
@@ -295,8 +295,8 @@ header {
     &.nav-opened {
       .megamenu-main-nav > .component-content .navigation-mobile-menu {
         // background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/cross-icon.svg');
-        content: '\e90e';
-        font-family: 'icomoon';
+        content: "\e90e";
+        font-family: "icomoon";
         font-size: 1rem;
         background-size: auto;
         top: 3px;
@@ -365,7 +365,7 @@ header {
           height: 4rem;
           padding: 1rem 2rem 1rem 1rem !important;
         }
-        input[type='text'] {
+        input[type="text"] {
           width: 100% !important;
           border: 2px solid $color-black;
           display: none !important;
@@ -382,7 +382,7 @@ header {
         justify-content: space-evenly !important;
         align-items: flex-start;
       }
-      input[type='text'] {
+      input[type="text"] {
         height: auto;
         color: $color-black;
         background-size: 18px auto;
@@ -401,8 +401,8 @@ header {
         }
       }
       button {
-        content: '\f0d1';
-        font-family: 'icomoon';
+        content: "\f0d1";
+        font-family: "icomoon";
         position: relative;
         width: 14px !important;
         height: 14px !important;
@@ -434,7 +434,7 @@ header {
           }
         }
         &::before {
-          content: 'Search';
+          content: "Search";
           position: absolute;
           left: -56px;
           top: -2px;
@@ -446,7 +446,7 @@ header {
           }
         }
         &::after {
-          content: '';
+          content: "";
           position: absolute;
           left: -57px;
           right: 0;
@@ -511,15 +511,10 @@ header {
     }
   }
 }
-.megamenu-navigation
-  .megamenu-search.is-open
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button {
+.megamenu-navigation .megamenu-search.is-open > .component-content > .paragraphSystem .searchBox button {
   opacity: 1 !important;
   &::before {
-    content: 'Search';
+    content: "Search";
     position: absolute;
     left: -48px;
     top: 1px;
@@ -572,44 +567,18 @@ header {
     padding-left: 0rem;
   }
 }
-.megamenu-navigation
-  .megamenu-search.is-open
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button,
-.megamenu-navigation
-  .megamenu-search:focus
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button,
-.megamenu-navigation
-  .megamenu-search.is-open
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button:hover,
-.megamenu-navigation
-  .megamenu-search:focus
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  button:hover {
+.megamenu-navigation .megamenu-search.is-open > .component-content > .paragraphSystem .searchBox button,
+.megamenu-navigation .megamenu-search:focus > .component-content > .paragraphSystem .searchBox button,
+.megamenu-navigation .megamenu-search.is-open > .component-content > .paragraphSystem .searchBox button:hover,
+.megamenu-navigation .megamenu-search:focus > .component-content > .paragraphSystem .searchBox button:hover {
   opacity: 0;
   width: 0;
   margin: 0;
 }
 
 @media (max-width: 1023px) {
-  .megamenu-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-mobile-menu,
-  .simple-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-mobile-menu {
+  .megamenu-navigation .megamenu-main-nav > .component-content > .navigation-mobile-menu,
+  .simple-navigation .megamenu-main-nav > .component-content > .navigation-mobile-menu {
     right: 5px;
     left: auto;
     top: -5px;
@@ -619,18 +588,8 @@ header {
     margin: 0 !important;
   }
   .reference-megamenu .megamenu-top-bar-right .richText-content p,
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem .richText p,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem .richText p {
     min-height: 30px;
     display: inline-block;
     color: $color-black !important;
@@ -639,47 +598,19 @@ header {
     line-height: 30px;
     width: auto;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    > *,
-  .simple-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    > * {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem > *,
+  .simple-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem > * {
     text-align: left;
     padding: 0;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem,
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem,
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem {
     padding: 0px;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    > *,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    > * {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem > *,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem > * {
     text-align: left;
   }
   .megamenu-navigation
@@ -698,16 +629,8 @@ header {
     justify-content: left;
     padding: 0px; /* min-height: 26px; */
   }
-  .megamenu-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-root.navigation-level1
-    > .navigation-item,
-  .simple-navigation
-    .megamenu-main-nav
-    > .component-content
-    > .navigation-root.navigation-level1
-    > .navigation-item {
+  .megamenu-navigation .megamenu-main-nav > .component-content > .navigation-root.navigation-level1 > .navigation-item,
+  .simple-navigation .megamenu-main-nav > .component-content > .navigation-root.navigation-level1 > .navigation-item {
     justify-content: left;
     text-align: left; /* min-height: 26px; */
     width: 100%;
@@ -726,10 +649,7 @@ header {
   margin: auto !important;
 }
 
-.megamenu-navigation
-  .megamenu-nav-container.sticked-js
-  > .component-content
-  > .paragraphSystem {
+.megamenu-navigation .megamenu-nav-container.sticked-js > .component-content > .paragraphSystem {
   position: relative;
 }
 
@@ -824,13 +744,8 @@ header {
     line-height: $line-height-150;
   }
 }
-.megamenu-navigation
-  .megamenu-search
-  > .component-content
-  > .paragraphSystem
-  .searchBox
-  input[type='text'] {
-  background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/green-search.svg');
+.megamenu-navigation .megamenu-search > .component-content > .paragraphSystem .searchBox input[type="text"] {
+  background-image: url("/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/green-search.svg");
   background-color: #eaeaea;
   background-size: 2rem !important;
   background-position: center right 0 !important;
@@ -899,7 +814,7 @@ header {
     &.page-planet-and-people,
     &.page-careers {
       a::before {
-        content: '';
+        content: "";
         border: solid #a19e9e;
         border-width: 0 3px 3px 0;
         display: inline-block;
@@ -938,9 +853,7 @@ header {
   }
 }
 
-.megamenu-navigation
-  .megamenu--newco.mobile-megamenu-search
-  > .component-content {
+.megamenu-navigation .megamenu--newco.mobile-megamenu-search > .component-content {
   max-height: 95px;
   @include xs {
     max-height: initial;
@@ -967,12 +880,7 @@ header {
     padding: 0;
   }
 
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem .richText p {
     text-align: left;
     margin-left: 0.25rem;
   }
@@ -985,14 +893,8 @@ header {
     margin-top: 2.5rem;
   }
 
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem {
     padding: 0 !important;
   }
 
@@ -1000,24 +902,13 @@ header {
     display: block;
     width: 100%;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    .richText
-    p {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem .richText p {
     text-align: left;
     width: 100%;
     margin-left: 0.25rem;
   }
-  .megamenu-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem,
-  .simple-navigation
-    .megamenu-top-bar-left
-    > .component-content
-    > .paragraphSystem {
+  .megamenu-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem,
+  .simple-navigation .megamenu-top-bar-left > .component-content > .paragraphSystem {
     padding: 0;
   }
   .megamenu-navigation .megamenu-top-bar-left {
@@ -1037,11 +928,7 @@ header {
 }
 
 @media only screen and (min-width: 1024px) {
-  .megamenu-navigation
-    .megamenu-top-bar-right
-    > .component-content
-    > .paragraphSystem
-    > div {
+  .megamenu-navigation .megamenu-top-bar-right > .component-content > .paragraphSystem > div {
     margin-left: 0;
   }
 }
@@ -1058,11 +945,7 @@ header {
 .megamenu-top-bar-right .megamenu-search {
   height: auto !important;
 }
-.megamenu-main-nav
-  > *
-  > .navigation-root.navigation-level1
-  .navigation-item
-  > a {
+.megamenu-main-nav > * > .navigation-root.navigation-level1 .navigation-item > a {
   padding: 0 1rem;
   position: relative;
   width: auto;
@@ -1071,8 +954,8 @@ li.page-who-we-are a::before,
 li.page-our-brands a::before,
 li.page-planet-and-people a::before,
 li.page-careers a::before {
-  content: '\e903';
-  font-family: 'icomoon';
+  content: "\e903";
+  font-family: "icomoon";
   color: #a19e9e;
   display: inline-block;
   font-size: 1rem;
@@ -1103,15 +986,10 @@ li.page-careers a::before {
   .imageCompatibleMarkup:after {
   color: #000;
 }
-.reference-whats-new
-  .carousel-cq
-  .lSSlideOuter
-  .lSSlideWrapper
-  .carousel-slides
-  .carousel-slide {
+.reference-whats-new .carousel-cq .lSSlideOuter .lSSlideWrapper .carousel-slides .carousel-slide {
   margin-top: 4rem;
 }
-.megamenu .searchBox input[type='text'] {
+.megamenu .searchBox input[type="text"] {
   font-size: $font-size-12;
   @include sm {
     font-size: $font-size-16;
@@ -1172,5 +1050,88 @@ li.page-careers a::before {
     -ms-flex-order: 8;
     order: 8;
     width: 100vw;
+  }
+}
+.megamenu.nav-opened > .component-content {
+  max-height: 100vh;
+  min-height: 100vh;
+  overflow: auto;
+  background-color: #fff;
+  @include sd {
+    background: transparent;
+    max-height: none;
+    min-height: auto;
+    overflow: visible;
+  }
+}
+.megamenu-navigation .megamenu > .component-content,
+.simple-navigation .megamenu > .component-content {
+  -webkit-transform-origin: top center;
+  -ms-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  -webkit-transition-delay: 0.1s;
+  -o-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+  background: #fff;
+  left: 0;
+  max-height: 50px;
+  min-height: 50px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  width: 100%;
+  z-index: 9;
+  @include sd {
+    background: transparent;
+    max-height: none;
+    max-width: 940px;
+    min-height: auto;
+    overflow: visible;
+    position: relative;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .megamenu-top-bar-left {
+    margin: 1rem 0;
+    -webkit-box-ordinal-group: 5;
+    -ms-flex-order: 4;
+    order: 4;
+  }
+  .megamenu-logo {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    position: relative;
+  }
+  .megamenu-top-bar-right {
+    margin: 0;
+    -webkit-box-ordinal-group: 6;
+    -ms-flex-order: 5;
+    order: 5;
+  }
+  .megamenu-search {
+    -webkit-animation: searchshow 0.2s ease forwards;
+    animation: searchshow 0.2s ease forwards;
+    margin: 0;
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    overflow: hidden;
+  }
+  .megamenu-nav-container {
+    margin: 0;
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
+    order: 3;
+    padding: 0;
   }
 }
