--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -1,15 +1,27 @@
 .card-text-image {
   background-color: var(--bg-color-3);
+
   .card-text {
     padding: 1.5rem;
   }
+
   .card-image {
+    padding: 1.5rem 1.5rem 8.5rem;
+
     img {
       width: 100%;
       object-fit: cover;
     }
+
     &.card-image-with-link {
       @extend .bottom-right-arrow;
     }
+  }
+}
+
+@media only screen and (max-width: 1279px) and (min-width: 992px) {
+  .card-text-image-small .card-image img {
+    height: 350px !important;
+    object-position: top;
   }
 }
