--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -3,11 +3,12 @@
 
   .card-text {
     padding: 1.5rem;
+    @include sm {
+      padding: 1.5rem 1.5rem 8.5rem;
+    }
   }
 
   .card-image {
-    padding: 1.5rem 1.5rem 8.5rem;
-
     img {
       width: 100%;
       object-fit: cover;
