--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -253,7 +253,7 @@ header {
     &::after {
       background: none;
     }
-    @media (min-width: $breakpoint-sd-min) {
+    @media (min-width: $breakpoint-md-min) {
       width: 20%;
       order: 2;
       max-width: 20%;
@@ -408,7 +408,7 @@ header {
         background-size: 14px !important;
         right: 0 !important;
         top: 0.9rem !important;
-        @media only screen and (max-width: 1023.5px) {
+        @media only screen and (max-width: 991px) {
           width: 24px !important;
           height: 24px !important;
           background-size: 24px !important;
@@ -419,7 +419,7 @@ header {
         &:hover {
           &:after {
             display: block;
-            @media only screen and (max-width: 1023.5px) {
+            @media only screen and (max-width: 991px) {
               display: none;
             }
           }
@@ -427,7 +427,7 @@ header {
         &:focus {
           &:after {
             display: block;
-            @media only screen and (max-width: 1023.5px) {
+            @media only screen and (max-width: 991px) {
               display: none;
             }
           }
@@ -473,7 +473,7 @@ header {
     .default-style {
       margin-bottom: 1rem;
     }
-    @media (min-width: $breakpoint-sd-min) {
+    @media (min-width: $breakpoint-md-min) {
       .component-content > .paragraphSystem {
         height: auto;
       }
@@ -488,7 +488,7 @@ header {
   }
   .megamenu-top-bar-right {
     // Newly Added
-    @media (min-width: $breakpoint-sd-min) {
+    @media (min-width: $breakpoint-md-min) {
       width: 22%;
       max-width: 22%;
       margin-left: 4%;
@@ -949,12 +949,6 @@ header {
 }
 
 @media only screen and (max-width: 1023px) and (min-width: 991px) {
-  .megamenu-navigation .megamenu-logo > .component-content .image a {
-    position: absolute;
-    left: -2rem;
-    top: -1.5rem;
-  }
-
   .megamenu-navigation
     .megamenu-main-nav
     > .component-content
