add youtube icon

--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -50,6 +50,18 @@
   @extend .bottom-right-arrow;
 }
 
+.card-content-container{
+  position: relative;
+&::after {
+ @extend .bottom-right-arrow;
+ bottom: auto;
+ top: -50px;
+}
+}
+.play{
+  display: block;
+
+}
 /* Health pro End */
 
 .scroll-down-arrow {
