--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -403,18 +403,22 @@ header {
         content: '\f0d1';
         font-family: 'icomoon';
         position: relative;
-        width: 14px !important;
-        height: 14px !important;
-        background-size: 14px !important;
-        right: 0 !important;
-        top: 0.9rem !important;
-        @media only screen and (max-width: 991px) {
-          width: 24px !important;
-          height: 24px !important;
-          background-size: 24px !important;
+        width: 24px !important;
+        height: 24px !important;
+        background-size: 24px !important;
+        top: 4px !important;
+        right: 2rem !important;
+        position: fixed;
+        @include md {
+          right: -20px !important;
           top: 4px !important;
-          right: 2rem !important;
-          position: fixed;
+          width: 14px !important;
+          height: 14px !important;
+          background-size: 14px !important;
+          position: relative;
+        }
+        @include sd {
+          top: 0.9rem !important;
         }
         &:hover {
           &:after {
@@ -437,10 +441,13 @@ header {
           position: absolute;
           left: -56px;
           top: -2px;
-          font-size: $font-size-16;
+          font-size: $font-size-13;
           color: $color-black;
           font-family: $font-family-default;
-          @media only screen and (max-width: 1023.5px) {
+          @include sd {
+            font-size: $font-size-16;
+          }
+          @media only screen and (max-width: 991px) {
             display: none;
           }
         }
@@ -489,8 +496,8 @@ header {
   .megamenu-top-bar-right {
     // Newly Added
     @media (min-width: $breakpoint-md-min) {
-      width: 22%;
-      max-width: 22%;
+      width: 24%;
+      max-width: 24%;
       margin-left: 4%;
       order: 3;
       .richText {
@@ -525,7 +532,7 @@ header {
     font-size: $font-size-14;
     color: $color-black;
     display: none;
-    @include sd {
+    @include md {
       display: block;
     }
   }
