--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -56,8 +56,12 @@
 &::after {
  @extend .bottom-right-arrow;
  bottom: auto;
- top: -50px;
- width: 48px;
+ bottom: auto;
+ top: -48px;
+ width: 50px;
+ height: 48px;
+ line-height: 48px;
+
 }
 }
 .play{
