bg strip chnages

--- a/src/scss/brand/components/video/_index.scss
+++ b/src/scss/brand/components/video/_index.scss
@@ -17,7 +17,6 @@
       width: 100%;
     }
   }
-  
 }
 .youtube-player {
   height: auto;
@@ -34,7 +33,7 @@
       content: '\e91b';
       font-family: 'icomoon';
       height: 80px;
-      background: #F900FF;
+      background: #f900ff;
       width: 80px;
       color: #000;
       text-align: center;
@@ -43,7 +42,7 @@
       align-items: center;
       font-size: 1.5rem;
       justify-content: center;
-  }
+    }
   }
 }
 .profile-hero-banner .reference-card-block .youtube-player > img {
