add youtube icon

--- a/src/scss/brand/components/video/_index.scss
+++ b/src/scss/brand/components/video/_index.scss
@@ -48,4 +48,10 @@
 .profile-hero-banner .reference-card-block .youtube-player > img {
   position: static;
 }
-
+.youtube-play-icon {
+  .youtube-player {
+    .play {
+      display: none;
+    }
+  }
+}
