--- a/src/scss/brand/components/video/_index.scss
+++ b/src/scss/brand/components/video/_index.scss
@@ -32,7 +32,7 @@
         content: '\e91b';
         font-family: 'icomoon';
         height: 80px;
-        background: #F900FF;
+        background: #f900ff;
         width: 80px;
         color: #000;
         text-align: center;
@@ -41,11 +41,10 @@
         align-items: center;
         font-size: 1.5rem;
         justify-content: center;
-    }
+      }
     }
   }
 }
 .profile-hero-banner .reference-card-block .youtube-player > img {
   position: static;
 }
-
