--- a/src/scss/brand/components/quote/_index.scss
+++ b/src/scss/brand/components/quote/_index.scss
@@ -6,6 +6,7 @@
     padding: 0 2rem;
     .quote-title {
       position: relative;
+      padding-top: 2rem;
       &::before {
         content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-quote.png');
         position: absolute;
