--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -100,3 +100,36 @@
     }
   }
 }
+
+.position-static {
+  position: static;
+}
+
+.position-static {
+  position: static;
+}
+
+.full-clickable-box:hover {
+  a:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  .card-image-with-link {
+    &:after {
+      filter: grayscale(100) contrast(100) invert(1);
+    }
+  }
+}
+
+.full-clickable-box:focus-within {
+  .card-image-with-link {
+    &:after {
+      outline: 2px solid $color-2;
+    }
+  }
+}
