add youtube icon

--- a/src/scss/brand/components/video/_index.scss
+++ b/src/scss/brand/components/video/_index.scss
@@ -19,6 +19,11 @@
   }
  
 }
+.youtube-player {
+  .play {
+    display: none;
+  }
+}
 .youtube-play-icon {
   height: auto;
   padding: 0;
@@ -29,7 +34,7 @@
     height: 100%;
   }
   .play {
-    display: none;
+    display: block;
     &::after {
       position: absolute;
       content: '\e91b';
@@ -50,8 +55,4 @@
 .profile-hero-banner .reference-card-block .youtube-player > img {
   position: static;
 }
-.youtube-player {
-  .play {
-    display: none;
-  }
-}
+
