--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -226,6 +226,9 @@ a[style*='visibility:hidden'] {
     margin: auto;
   }
 }
+.m-auto{
+  margin: auto;
+}
 .p-m-x-1-5 {
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
