--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -52,6 +52,7 @@
         border-radius: 30px;
         top: 0rem;
         left: auto;
+        background-color: $color-grey-3;
         &:after {
           font-family: 'icomoon';
         }
