--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -217,7 +217,7 @@ a[style*='visibility:hidden'] {
   }
 }
 .width-auto img {
-  width: auto;
+  width: auto !important;
 }
 .max-content-width-1140 {
   max-width: 100%;
