--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -23,16 +23,17 @@
 .leader-card-bg {
   background: #eaeaea;
 }
-.profile-hero-banner{
- @include sm{
-  .media-container , .card-content-container{
-    width: 50% !important;
-    max-width: 50% !important;
-    flex-basis: 50% !important;
-    background-color: $color-white;
-    &::after{
-      display: none;
+.profile-hero-banner {
+  @include sm {
+    .media-container,
+    .card-content-container {
+      width: 50% !important;
+      max-width: 50% !important;
+      flex-basis: 50% !important;
+      background-color: $color-white;
+      &::after {
+        display: none;
+      }
     }
   }
-}
 }
